# aegis

./: .gitignore  README.md
src/autofi/: Dockerfile  agent.py  sender.py  uagent.py
src/autofi/autofi_agent/: pyproject.toml
src/autofi/autofi_agent/src/autofi_agent/: __init__.py
src/autofi/autofi_agent/src/autofi_agent/graph/: __init__.py  graph.py  investment_expert_agent.py  misc.py  operator_agent.py  state.py
src/autofi/autofi_agent/src/autofi_agent/mcp/: investment_expert_helper.py  operator_helper.py
src/autofi/autofi_agent/src/autofi_agent/prompt/: __init__.py  investment_expert_prompt.py  operator_prompt.py
src/autofi/autofi_agent/src/autofi_agent/service/: __init__.py  distributed_lock.py  service.py
src/autofi/autofi_core/: pyproject.toml
src/autofi/autofi_core/src/autofi_core/: __init__.py
src/autofi/autofi_core/src/autofi_core/baml_src/: clients.baml  safe_generator.baml  safe_supervisor.baml  summarizer.baml
src/autofi/autofi_core/src/autofi_core/common/: __init__.py  conf.py  const.py  logger.py  messages.py  misc.py  model.py  nats.py  redis.py  stats.py  vault_account.py  vault_client.py
src/autofi/autofi_core/src/autofi_core/grpc_api/gateway/: __init__.py  gateway.proto  gateway_pb2.py  gateway_pb2.pyi  gateway_pb2_grpc.py
src/autofi/autofi_uagent/: pyproject.toml
src/autofi/autofi_uagent/src/autofi_uagent/common/: conf.py  types.py
src/autofi/autofi_uagent/src/autofi_uagent/graph/: graph.py  prompt.py
src/autofi/autofi_uagent/src/autofi_uagent/mcp/: risk_profile.py
src/autofi/baml_src/: clients.baml
src/autofi/cdp_sender/: pyproject.toml
src/chatbot/: .gitignore  config.toml.template  package.json  tsconfig.json  vitest.config.ts
src/chatbot/src/: config.ts  (+1 more)
(+50 files in other folders)
